Bug 153138 - UI missing for IgnoreTabsAndBlanksForLineCalculation compatibility setting
Summary: UI missing for IgnoreTabsAndBlanksForLineCalculation compatibility setting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: difficultyInteresting, easyHack, skillCpp
Depends on:
Blocks: Options-Dialog-Writer
  Show dependency treegraph
 
Reported: 2023-01-21 09:34 UTC by Mike Kaganski
Modified: 2025-11-04 09:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-01-21 09:34:23 UTC
There is a IgnoreTabsAndBlanksForLineCalculation compatibility setting, making space character height not affect line height. It is enabled for Word file formats, and its effect can be observed in attachment 184814 [details].

This setting has no entry in Options->Writer->Compatibility. Like with bug 76005 and bug 126513, it needs to be present there.
Comment 1 stragu 2023-01-23 08:53:23 UTC
Currently, default is False in settings: https://opengrok.libreoffice.org/xref/core/smoketest/data/settings.xml?r=2b383d19#72

It is set to True for DOCX filter: https://opengrok.libreoffice.org/xref/core/writerfilter/source/filter/WriterFilter.cxx?r=de2b1a3a#317

No control in Compatibility section of Options dialog: https://opengrok.libreoffice.org/xref/core/officecfg/registry/schema/org/openoffice/Office/Compatibility.xcs?r=27f98935

Tested in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 579d144290c1617fdb38d09b30900a6bbe390b8d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Mike Kaganski 2024-01-27 05:13:34 UTC
A commit that adds adds another compatibility option to the dialog:
https://gerrit.libreoffice.org/c/core/+/162635
Comment 3 Commit Notification 2024-10-31 13:46:37 UTC
Adesola Samuel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71d2849bf62c21672626cc5fa9729677ef5ef292

tdf#153138 Add IgnoreTabsAndBlanksForLineCalculation compat opt to dialog

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Akshay Kumar Dubey 2025-03-16 15:09:38 UTC
Hi, it seems this bug is already fixed, but it's still listed under the EasyHacks interesting section.