tdf#153138 Add IgnoreTabsAndBlanksForLineCalculation compat opt to dialog

IgnoreTabsAndBlanksForLineCalculation was added to the option->
writer->compatibility options with the label "Make whitespace
character height not affect line height"

Change-Id: I8b99409b01ba2af635018d15cde2e549dff92732
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175831
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>